# r1cmd

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
deploy/: README.md  nginx-r1cmd.conf
r1cmd/: pyvenv.cfg
src/r1cmd/: __init__.py  cli.py  config.py  constants.py  core.py  tui.py
