[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r1cmd"
version = "0.2.0"
description = "Simple CLI and library for ArvanCloud Object Storage"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jalinuxy", email = 'jalinuxy@gmail.com' },
]
keywords = ["arvan", "s3", "object-storage", "cli", "boto3", "aws", "arvan-cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]

[project.scripts]
r1 = "r1cmd.cli:main"

[project.urls]
Homepage = "https://github.com/jalinuxy/r1cmd"
Repository = "https://github.com/jalinuxy/r1cmd"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
